(library
  (name logger)
  (modules logger)
  (package OEngine_lib)
  (preprocess (pps ppx_deriving.show))
  (libraries core fmt))

(library
 (name dequeue)
 (modules dequeue)
 (package OEngine_lib)
 (libraries core))

(library
 (name events)
 (modules events)
 (package OEngine_lib)
 (libraries glfw core))

(library
 (name application)
 (modules application)
 (package OEngine_lib)
 (libraries
  core
  glfw
  vertex_array
  shader
  events
  dequeue
  buffer
  imguiml
  imguiml.imguiml_impl
  glew))

(library
 (name OEngine_lib)
 (public_name OEngine_lib)
 (modules)
 (libraries
  (re_export application)
  (re_export vertex_array)
  (re_export shader)
  (re_export events)
  (re_export buffer)
  (re_export renderer)
  (re_export logger)))
