(library
 (name buffer_data)
 (modules bufferElement bufferLayout dataType)
 (package OEngine_lib)
 (wrapped false))

(library
 (name index_buffer)
 (modules index_buffer)
 (virtual_modules index_buffer)
 (package OEngine_lib)
 (libraries core buffer_data))

(library
 (name vertex_buffer)
 (modules vertex_buffer)
 (virtual_modules vertex_buffer)
 (package OEngine_lib)
 (libraries core buffer_data))

(library
 (name buffer)
 (modules buffer)
 (package OEngine_lib)
 (libraries core vertex_buffer index_buffer))
