(executable
 (name generator)
 (modules generator)
 (libraries bindings ctypes.stubs ctypes))

(rule
 (targets stubs.c generated.ml constants_generator.c)
 (deps generator.exe)
 (action
  (run %{deps})))

(rule
 (targets constants_generator.exe)
 (deps constants_generator.c)
 (action
  (run
   %{cc}
   -o
   %{targets}
   %{deps}
   -I%{ocaml_where}/../ctypes
   -I%{ocaml_where})))

(rule
 (targets constants.ml)
 (deps constants_generator.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(library
 (name generated)
 (package OEngine_stubs)
 (modules generated)
 (foreign_stubs
  (language c)
  (names stubs)
  (flags :standard -Wno-incompatible-pointer-types))
 (libraries ctypes.stubs)
 (c_library_flags -lGLEW -lGL -lglfw))

(library
 (name constants)
 (package OEngine_stubs)
 (modules constants)
 (libraries ctypes.stubs))
